--- a/LectureCode/Week1/Union/Union.vcxproj.filters
+++ b/LectureCode/Week1/Union/Union.vcxproj.filters
@@ -15,7 +15,7 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="main.cpp">
+    <ClCompile Include="Unionmain.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
